--- a/Quartz2DTest/Info.plist
+++ b/Quartz2DTest/Info.plist
@@ -34,5 +34,7 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>此应用需要您的同意才能读取相册资料</string>
 </dict>
 </plist>
